# nexus-nuance

./: .env.example  .env.template  .gitignore  2026-02-18_NEXUS_ATLAS_TestPlan_QuantCrypto.md  ARCHITECTURE.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  mc  mm  pyproject.toml  requirements.txt  run.sh  run_system.py  start_learning.py
agents/: browser_controller.py  orchestrator.py  vision_analyzer.py
config/: mcp_config.json  settings.yaml
dashboards/: learning-status.html  self-learning-dashboard.html
docs/: ARCHITECTURE.md  COMPUTER_CONTROL.md  GUARDIAN_AGENT.md  HANDOVER_2026-02-15.md  HUMAN_LIKE_LEARNING.md  MODEL_COMPARISON.md  NEXUS_ARCHITECTURE.md  NEXUS_FRONTIER_EXTENSION.md  NEXUS_FRONTIER_PART2.md  NEXUS_SYSTEM_SUMMARY.md  NEXUS_USER_RESEARCH.md  NEXUS_WORLD_DOMINANCE_PLAN.md  PARALLEL_ARCHITECTURE.md  PRODUCTION_PUBLIC_CHECKLIST.md  PROJECT_BRAIN.md  PROVIDER_QUICK_SETTINGS.md  README.md  RESTRUCTURE_PLAN.md  SYSTEM_ANALYSIS.md
monitor/: app.py
nexus/: __init__.py
project_plans/: jack-note-ai.md
scripts/: auto_learn.py  auto_sync.py  autopilot_loop.py  brain_acceptance_gate.py  brain_daemon.py  claude-with-minimax.sh  demo.py  evolution_daemon.py  main_loop.py  nexus_full_automation.py  nexus_input.py  nexus_loop.py  openclaw_watchdog.sh  prepare_public_release.sh  privacy_audit.sh  run_24x7.sh  runtime_locks.py  start.py  sync_runtime.py  terminal_telemetry.py  ui_ux_infinite_loop.py
src/: __init__.py
templates/: base.html
tests/: basic.test.js  conftest.py  test_app.js  test_nexus.js  test_nexus_edge_cases.js  (+4 more)
(+233 files in other folders)
